# gmeet_desktop_launcher-app

./: .gitignore  README.md  Task.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: generate_icons.py
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backgrounds.rs  lib.rs  main.rs  store.rs
src/components/: BackgroundCard.tsx  BackgroundList.tsx  ComingSoon.tsx  CreateMeetingCard.tsx  EmptyMeetingWidget.tsx  Footer.tsx  GreetingsCard.tsx  JoinMeetingCard.tsx  MeetingCard.tsx  MeetingUrlPop.tsx  Navbar.tsx  PaymentPop.tsx  ScheduleMeetingPop.tsx  ScheduleNotficationPop.tsx  ScheduledMeetingBox.tsx
src/components/backgrounds/: BackgroundCard.tsx  BackgroundsSection.tsx  ComingSoonNotice.tsx
src/components/clipboard/: ClipboardMeetingPopup.tsx
src/components/home/: CreateMeetingCard.tsx  GreetingsCard.tsx  JoinMeetingCard.tsx
src/components/layout/: AppFooter.tsx  Header.tsx  TitleBar.tsx
src/components/premium/: PremiumPlansPopup.tsx  PremiumStatusButton.tsx
src/components/schedule/: MeetingReminderPopup.tsx  NoMeetingsPlaceholder.tsx  ScheduleMeetingPopup.tsx  ScheduledMeetingCard.tsx  UpcomingMeetingsSection.tsx
src/components/services/: AppServices.tsx
src/components/settings/: SettingsButton.tsx  SettingsPopup.tsx
src/components/ui/: ActionIconButton.tsx  CloseButton.tsx  DraggableScrollList.tsx  Popup.tsx  PrimaryBox.tsx  PrimaryButton.tsx  ScrollButtons.tsx
src/constants/: index.ts  siteContent.tsx
src/hooks/: useMeetClipboardWatcher.ts
src/providers/: AppProvider.tsx  ClipboardProvider.tsx  PremiumProvider.tsx  ReminderProvider.tsx  TimeProvider.tsx
src/services/: AppServices.tsx  PremiumServices.ts  ReminderService.ts  TimeService.ts  backgrounds.ts  microsoftStore.ts
src/styles/: index.css
src/types/: index.ts
