[package]
name = "app-for-google-meet"
version = "1.0.0"
description = "Lightweight desktop utility designed to streamline Google Meet access, scheduling, and session management. It removes browser overhead by providing a direct, native experience for launching and organizing meetings efficiently."
authors = ["ahmedwasim1070"]
edition = "2021"

[lib]
name = "gmeet_manager_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"

[[bin]]
name = "AppforGoogleMeet"
path = "src/main.rs"
