[package]
name = "gmeet-desktop-launcher"
version = "1.0.0"
description = "Lightweight desktop utility designed to streamline Google Meet access, scheduling, and session management. It removes browser overhead by providing a direct, native experience for launching and organizing meetings efficiently."
authors = ["ideaforge"]
edition = "2021"

[lib]
name = "gmeet_desktop_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"

# Microsoft Store (Windows.Services.Store) — Windows builds only
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
	"Foundation",
	"Foundation_Collections",
	"Services_Store",
	"Win32_Foundation",
	"Win32_UI_Shell",
] }

[[bin]]
name = "G-MeetDesktopLauncher"
path = "src/main.rs"
