[package]
name = "gmeet-desktop-launcher"
version = "1.0.3"
description = "Lightweight desktop utility designed to streamline Google Meet access, scheduling, and session management. It removes browser overhead by providing a direct, native experience for launching and organizing meetings efficiently."
authors = ["ideaforge"]
edition = "2021"

[lib]
name = "gmeet_desktop_launcher_lib"
# staticlib/cdylib are only needed for iOS/Android builds — desktop uses the
# rlib through the [[bin]] target, so dropping them halves link work per build
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"

# Microsoft Store (Windows.Services.Store) — Windows builds only
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
	"Foundation",
	"Foundation_Collections",
	"Services_Store",
	"Win32_Foundation",
	"Win32_UI_Shell",
] }
# Collection interfaces (IIterable etc.) were split out of the windows crate;
# 0.2 is the exact version windows 0.61 links against — keep them in lockstep
windows-collections = "0.2"

[[bin]]
name = "G-MeetDesktopLauncher"
path = "src/main.rs"

# Smaller, faster release binary (Store package size counts against download)
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
